// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ee/BoardContentSidebar incident sidebar matches the snapshot 1`] = `
<div
  class="boards-sidebar"
>
  <h2
    class="gl-my-0 gl-font-size-h2 gl-line-height-24"
  >
    Incident details
  </h2>
   
  <sidebartodowidget-stub
    class="gl-mt-3"
    fullpath="gitlab-org/gitlab-test"
    issuableid="gid://gitlab/Issue/436"
    issuableiid="27"
    issuabletype="issue"
  />
   
  <boardsidebartitle-stub
    activeitem="[object Object]"
    data-testid="sidebar-title"
  />
   
  <sidebarassigneeswidget-stub
    editable="true"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    initialassignees="[object Object],[object Object]"
    issuabletype="issue"
  />
   
  <!---->
   
  <div>
    <sidebardropdownwidget-stub
      attrworkspacepath="gitlab-org/gitlab-test"
      data-testid="sidebar-milestones"
      iid="27"
      issuableattribute="milestone"
      issuabletype="issue"
      workspacepath="gitlab-org/gitlab-test"
    />
     
    <!---->
  </div>
   
  <boardsidebartimetracker-stub />
   
  <sidebardatewidget-stub
    data-testid="sidebar-due-date"
    datetype="dueDate"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
   
  <sidebarlabelswidget-stub
    allowmultiselect="true"
    attrworkspacepath="gitlab-org/gitlab-test"
    class="block labels"
    dropdownbuttontext="Label"
    footercreatelabeltitle="Create project label"
    footermanagelabeltitle="Manage project labels"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
    labelcreatetype="project"
    labelscreatetitle="Create project label"
    labelsfilterbasepath=""
    labelsfilterparam="label_name"
    labelslisttitle="Assign labels"
    selectedlabels=""
    variant="sidebar"
    workspacetype="project"
  >
    
        None
      
  </sidebarlabelswidget-stub>
   
  <div
    class="block"
  >
    <div>
      <div
        class="gl-display-flex gl-align-items-center gl-line-height-20 gl-text-gray-900 gl-font-weight-bold"
      >
        <span
          class="hide-collapsed"
          data-testid="title"
        >
          
      Severity
    
        </span>
          
        <!---->
         
        <!---->
          
        <button
          class="btn gl-text-gray-900! gl-ml-auto hide-collapsed gl-mr-n2 shortcut-sidebar-dropdown-toggle btn-default btn-sm gl-button btn-default-tertiary"
          data-qa-selector="edit_link"
          data-testid="edit-button"
          id=""
          type="button"
        >
          <!---->
           
          <!---->
            
          <span
            class="gl-button-text"
          >
            
      Edit
    
          </span>
        </button>
      </div>
       
      <div
        class="gl-line-height-14"
        data-testid="collapsed-content"
      >
        <div
          class="sidebar-collapsed-icon"
        >
          <div
            class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
          >
            <svg
              aria-hidden="true"
              class="gl-icon s14 icon-unknown"
              data-testid="severity-unknown-icon"
              role="img"
            >
              <use
                href="file-mock#severity-unknown"
              />
            </svg>
             
            <!---->
          </div>
           
          <div
            class="gl-tooltip"
          >
            Severity: 
              Unknown
            
          </div>
        </div>
         
        <div
          class="hide-collapsed"
        >
          <div
            class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
          >
            <svg
              aria-hidden="true"
              class="gl-icon s12 icon-unknown gl-mr-3 gl-flex-shrink-0"
              data-testid="severity-unknown-icon"
              role="img"
            >
              <use
                href="file-mock#severity-unknown"
              />
            </svg>
             
            <span
              class="gl-min-w-0 gl-text-truncate"
            >
              
    Unknown
  
            </span>
          </div>
        </div>
      </div>
       
      <div
        class="gl-mt-3"
        data-testid="expanded-content"
        style="display: none;"
      >
        <div
          class="dropdown b-dropdown gl-dropdown gl-mt-3"
          id="__BVID__45"
        >
          <!---->
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="btn dropdown-toggle btn-default btn-md btn-block gl-button gl-dropdown-toggle"
            id="__BVID__45__BV_toggle_"
            type="button"
          >
            <!---->
             
            <!---->
             
            <span
              class="gl-dropdown-button-text"
            >
              Unknown
            </span>
             
            <svg
              aria-hidden="true"
              class="gl-button-icon dropdown-chevron gl-icon s16"
              data-testid="chevron-down-icon"
              role="img"
            >
              <use
                href="file-mock#chevron-down"
              />
            </svg>
          </button>
          <ul
            aria-labelledby="__BVID__45__BV_toggle_"
            class="dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <div
              class="gl-dropdown-inner"
            >
              <div
                class="gl-dropdown-header gl-border-b-0!"
              >
                <p
                  class="gl-dropdown-header-top"
                >
                  
        Assign severity
      
                </p>
                 
              </div>
               
              <!---->
               
              <div
                class="gl-dropdown-contents"
              >
                <!---->
                 
                <li
                  class="gl-dropdown-item"
                  role="presentation"
                >
                  <button
                    class="dropdown-item"
                    data-testid="severityDropdownItem"
                    role="menuitem"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="gl-icon s16 gl-dropdown-item-check-icon gl-visibility-hidden gl-mt-3 gl-align-self-start"
                      data-testid="dropdown-item-checkbox"
                      role="img"
                    >
                      <use
                        href="file-mock#mobile-issue-close"
                      />
                    </svg>
                     
                    <!---->
                     
                    <!---->
                     
                    <div
                      class="gl-dropdown-item-text-wrapper"
                    >
                      <p
                        class="gl-dropdown-item-text-primary"
                      >
                        <div
                          class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
                        >
                          <svg
                            aria-hidden="true"
                            class="gl-icon s12 icon-critical gl-mr-3 gl-flex-shrink-0"
                            data-testid="severity-critical-icon"
                            role="img"
                          >
                            <use
                              href="file-mock#severity-critical"
                            />
                          </svg>
                           
                          <span
                            class="gl-min-w-0 gl-text-truncate"
                          >
                            
    Critical - S1
  
                          </span>
                        </div>
                      </p>
                       
                      <!---->
                    </div>
                     
                    <!---->
                  </button>
                </li>
                <li
                  class="gl-dropdown-item"
                  role="presentation"
                >
                  <button
                    class="dropdown-item"
                    data-testid="severityDropdownItem"
                    role="menuitem"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="gl-icon s16 gl-dropdown-item-check-icon gl-visibility-hidden gl-mt-3 gl-align-self-start"
                      data-testid="dropdown-item-checkbox"
                      role="img"
                    >
                      <use
                        href="file-mock#mobile-issue-close"
                      />
                    </svg>
                     
                    <!---->
                     
                    <!---->
                     
                    <div
                      class="gl-dropdown-item-text-wrapper"
                    >
                      <p
                        class="gl-dropdown-item-text-primary"
                      >
                        <div
                          class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
                        >
                          <svg
                            aria-hidden="true"
                            class="gl-icon s12 icon-high gl-mr-3 gl-flex-shrink-0"
                            data-testid="severity-high-icon"
                            role="img"
                          >
                            <use
                              href="file-mock#severity-high"
                            />
                          </svg>
                           
                          <span
                            class="gl-min-w-0 gl-text-truncate"
                          >
                            
    High - S2
  
                          </span>
                        </div>
                      </p>
                       
                      <!---->
                    </div>
                     
                    <!---->
                  </button>
                </li>
                <li
                  class="gl-dropdown-item"
                  role="presentation"
                >
                  <button
                    class="dropdown-item"
                    data-testid="severityDropdownItem"
                    role="menuitem"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="gl-icon s16 gl-dropdown-item-check-icon gl-visibility-hidden gl-mt-3 gl-align-self-start"
                      data-testid="dropdown-item-checkbox"
                      role="img"
                    >
                      <use
                        href="file-mock#mobile-issue-close"
                      />
                    </svg>
                     
                    <!---->
                     
                    <!---->
                     
                    <div
                      class="gl-dropdown-item-text-wrapper"
                    >
                      <p
                        class="gl-dropdown-item-text-primary"
                      >
                        <div
                          class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
                        >
                          <svg
                            aria-hidden="true"
                            class="gl-icon s12 icon-medium gl-mr-3 gl-flex-shrink-0"
                            data-testid="severity-medium-icon"
                            role="img"
                          >
                            <use
                              href="file-mock#severity-medium"
                            />
                          </svg>
                           
                          <span
                            class="gl-min-w-0 gl-text-truncate"
                          >
                            
    Medium - S3
  
                          </span>
                        </div>
                      </p>
                       
                      <!---->
                    </div>
                     
                    <!---->
                  </button>
                </li>
                <li
                  class="gl-dropdown-item"
                  role="presentation"
                >
                  <button
                    class="dropdown-item"
                    data-testid="severityDropdownItem"
                    role="menuitem"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="gl-icon s16 gl-dropdown-item-check-icon gl-visibility-hidden gl-mt-3 gl-align-self-start"
                      data-testid="dropdown-item-checkbox"
                      role="img"
                    >
                      <use
                        href="file-mock#mobile-issue-close"
                      />
                    </svg>
                     
                    <!---->
                     
                    <!---->
                     
                    <div
                      class="gl-dropdown-item-text-wrapper"
                    >
                      <p
                        class="gl-dropdown-item-text-primary"
                      >
                        <div
                          class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
                        >
                          <svg
                            aria-hidden="true"
                            class="gl-icon s12 icon-low gl-mr-3 gl-flex-shrink-0"
                            data-testid="severity-low-icon"
                            role="img"
                          >
                            <use
                              href="file-mock#severity-low"
                            />
                          </svg>
                           
                          <span
                            class="gl-min-w-0 gl-text-truncate"
                          >
                            
    Low - S4
  
                          </span>
                        </div>
                      </p>
                       
                      <!---->
                    </div>
                     
                    <!---->
                  </button>
                </li>
                <li
                  class="gl-dropdown-item"
                  role="presentation"
                >
                  <button
                    class="dropdown-item"
                    data-testid="severityDropdownItem"
                    role="menuitem"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="gl-icon s16 gl-dropdown-item-check-icon gl-mt-3 gl-align-self-start"
                      data-testid="dropdown-item-checkbox"
                      role="img"
                    >
                      <use
                        href="file-mock#mobile-issue-close"
                      />
                    </svg>
                     
                    <!---->
                     
                    <!---->
                     
                    <div
                      class="gl-dropdown-item-text-wrapper"
                    >
                      <p
                        class="gl-dropdown-item-text-primary"
                      >
                        <div
                          class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
                        >
                          <svg
                            aria-hidden="true"
                            class="gl-icon s12 icon-unknown gl-mr-3 gl-flex-shrink-0"
                            data-testid="severity-unknown-icon"
                            role="img"
                          >
                            <use
                              href="file-mock#severity-unknown"
                            />
                          </svg>
                           
                          <span
                            class="gl-min-w-0 gl-text-truncate"
                          >
                            
    Unknown
  
                          </span>
                        </div>
                      </p>
                       
                      <!---->
                    </div>
                     
                    <!---->
                  </button>
                </li>
              </div>
               
              <!---->
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
   
  <!---->
   
  <sidebarhealthstatuswidget-stub
    full-path="gitlab-org/gitlab-test"
    iid="27"
    issuable-type="issue"
  />
   
  <sidebarconfidentialitywidget-stub
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
   
  <sidebarsubscriptionswidget-stub
    data-testid="sidebar-notifications"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
</div>
`;

exports[`ee/BoardContentSidebar issue sidebar matches the snapshot 1`] = `
<div
  class="boards-sidebar"
>
  <h2
    class="gl-my-0 gl-font-size-h2 gl-line-height-24"
  >
    Issue details
  </h2>
   
  <sidebartodowidget-stub
    class="gl-mt-3"
    fullpath="gitlab-org/gitlab-test"
    issuableid="gid://gitlab/Issue/436"
    issuableiid="27"
    issuabletype="issue"
  />
   
  <boardsidebartitle-stub
    activeitem="[object Object]"
    data-testid="sidebar-title"
  />
   
  <sidebarassigneeswidget-stub
    editable="true"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    initialassignees="[object Object],[object Object]"
    issuabletype="issue"
  />
   
  <sidebardropdownwidget-stub
    attrworkspacepath="gitlab-org"
    data-testid="sidebar-epic"
    iid="27"
    issuableattribute="epic"
    issuabletype="issue"
    workspacepath="gitlab-org/gitlab-test"
  />
   
  <div>
    <sidebardropdownwidget-stub
      attrworkspacepath="gitlab-org/gitlab-test"
      data-testid="sidebar-milestones"
      iid="27"
      issuableattribute="milestone"
      issuabletype="issue"
      workspacepath="gitlab-org/gitlab-test"
    />
     
    <sidebariterationwidget-stub
      attr-workspace-path="gitlab-org"
      class="gl-mt-5"
      data-testid="iteration-edit"
      iid="27"
      issuable-type="issue"
      workspace-path="gitlab-org/gitlab-test"
    />
  </div>
   
  <boardsidebartimetracker-stub />
   
  <sidebardatewidget-stub
    data-testid="sidebar-due-date"
    datetype="dueDate"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
   
  <sidebarlabelswidget-stub
    allowmultiselect="true"
    attrworkspacepath="gitlab-org/gitlab-test"
    class="block labels"
    dropdownbuttontext="Label"
    footercreatelabeltitle="Create project label"
    footermanagelabeltitle="Manage project labels"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
    labelcreatetype="project"
    labelscreatetitle="Create project label"
    labelsfilterbasepath=""
    labelsfilterparam="label_name"
    labelslisttitle="Assign labels"
    selectedlabels=""
    variant="sidebar"
    workspacetype="project"
  >
    
        None
      
  </sidebarlabelswidget-stub>
   
  <!---->
   
  <sidebarweightwidget-stub
    full-path="gitlab-org/gitlab-test"
    iid="27"
    issuable-type="issue"
  />
   
  <sidebarhealthstatuswidget-stub
    full-path="gitlab-org/gitlab-test"
    iid="27"
    issuable-type="issue"
  />
   
  <sidebarconfidentialitywidget-stub
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
   
  <sidebarsubscriptionswidget-stub
    data-testid="sidebar-notifications"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
</div>
`;
